View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030157 | Open CASCADE | OCCT:DRAW | public | 2018-09-24 11:29 | 2019-08-15 17:49 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030157: Draw Harness - xwd image dump should not be limited by desktop size within batch testing | ||||
Description | Test cases creating an AXO window with height greater than desktop produces image dump of unexpected size. This should be avoided within automated testing. [issue detected during testing on Jenkins with misconfigured desktop, which is quite possible since connected display makes small sense to server] | ||||
Steps To Reproduce | - Change desktop resolution to a high value (1920x1080) - Execute "testgrid geometry 2dbsplinecurve A8" Result: OK, A8.png is 800x800 - Change desktop resolution to a low value (1024x600) - Execute "testgrid geometry 2dbsplinecurve A8" Result: KO, A8.png is 800x581 | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
A8_KO.png (5,628 bytes) |
|
A8_OK.png (6,563 bytes) |
|
Branch CR30157 has been created by kgv. SHA-1: 5f4a7281f70cd7bbc09e0059c8c88395716850ad Detailed log of new commits: Author: kgv Date: Mon Sep 24 11:31:40 2018 +0300 0030157: Draw Harness - xwd image dump should not be limited by desktop size within batch testing DrawWindow now uses SWP_NOSENDCHANGING flag within batch mode to ensure that created window is not clipped in size by desktop dimensions. |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com/view/CR30157-master-KGV/ |
|
No remarks, please integrate |
|
OCCT branch : CR30157 SHA - 5f4a7281f70cd7bbc09e0059c8c88395716850ad Products branch : master SHA - f9065a267b8d853b9b62de5a81af9e9e51bc8d26 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17228.70999999978 / 17379.439999999933 [-0.87%] Products Total CPU difference: 7467.040000000043 / 7467.690000000077 [-0.01%] Windows-64-VC14: OCCT Total CPU difference: 17447.713443598597 / 17536.33761169853 [-0.51%] Products Total CPU difference: 8361.716000399994 / 8382.276932199968 [-0.25%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30157 has been deleted by inv. SHA-1: 5f4a7281f70cd7bbc09e0059c8c88395716850ad |
occt: master 72a2da56 2018-09-24 08:31:40 Committer: bugmaster Details Diff |
0030157: Draw Harness - xwd image dump should not be limited by desktop size within batch testing DrawWindow now uses SWP_NOSENDCHANGING flag within batch mode to ensure that created window is not clipped in size by desktop dimensions. |
Affected Issues 0030157 |
|
mod - src/Draw/Draw_Window.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-09-24 11:29 | kgv | New Issue | |
2018-09-24 11:29 | kgv | Assigned To | => apn |
2018-09-24 11:30 | kgv | File Added: A8_KO.png | |
2018-09-24 11:30 | kgv | File Added: A8_OK.png | |
2018-09-24 11:33 | git | Note Added: 0079348 | |
2018-09-24 14:16 | kgv | Note Added: 0079361 | |
2018-09-24 14:16 | kgv | Assigned To | apn => abv |
2018-09-24 14:16 | kgv | Status | new => resolved |
2018-09-24 14:24 | abv | Note Added: 0079365 | |
2018-09-24 14:24 | abv | Assigned To | abv => bugmaster |
2018-09-24 14:24 | abv | Status | resolved => reviewed |
2018-09-24 14:40 | kgv | Description Updated | |
2018-09-24 17:57 | bugmaster | Note Added: 0079375 | |
2018-09-24 17:57 | bugmaster | Status | reviewed => tested |
2018-09-30 18:26 | bugmaster | Changeset attached | => occt master 72a2da56 |
2018-09-30 18:26 | bugmaster | Status | tested => verified |
2018-09-30 18:26 | bugmaster | Resolution | open => fixed |
2018-09-30 18:47 | git | Note Added: 0079510 | |
2019-08-15 17:49 | bugmaster | Test case number | => Not required |