0030157: Draw Harness - xwd image dump should not be limited by desktop size within batch testing

DrawWindow now uses SWP_NOSENDCHANGING flag within batch mode to ensure
that created window is not clipped in size by desktop dimensions.